css/style.css
/* ... */
.main-nav .controls .search {
    color: #fff;
    text-decoration: none;
    font-size: var(--fs13);
    text-transform: uppercase;
}

.main-nav ul {
    list-style: none;
    margin: 0 auto;
    padding-left: 0;
    text-align: center;
}

.main-nav ul li a {
    font-size: var(--fs16);
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 300;
    position: relative;
}

.main-nav ul li a::before,
.main-nav ul li a::after {
    position: absolute;
    content: "";
    width: 44px;
    height: 1px;
    background-color: #fff;
    top: 50%;
    transform: translateY(-50%);
    opacity: 0;
    transition: all .3s;
}

.main-nav ul li.active a::before,
.main-nav ul li.active a::after,
.main-nav ul li a:hover::before,
.main-nav ul li a:hover::after {
    opacity: 1;
}

.main-nav ul li:not(:last-child) {
    margin-bottom: 20px;
}

.main-nav ul li a::before {
    left: -60px;
}

.main-nav ul li a::after {
    right: -60px;
}




.slider-cont {
    position: relative;
}

.slick-prev,
.slick-next {
    width: 23px;
    height: 11px;
    background: transparent url(../images/icons/arrow-b-R.svg) no-repeat center !important;
    background-size: contain;
    bottom: 0;
    top: unset;
    transform: none;
    border: none;
    font-size: 0;
    position: absolute;
    z-index: 2;
}


.slick-prev {
    left: calc(50% - 43px);
    transform: scaleX(-1);
}

.slick-next {
    right: calc(50% - 43px);
}

.slick-prev:before,
.slick-next:before {
    display: none;
}


/* home intro */
.home-intro {
    height: calc(100dvh - 99px);
    background-size: cover !important;

}

/* home intro */

/*************************** facts ***************************************/
.facts-slider {
    padding: 115px 0 90px;
}

.facts-slider .block-title {
    margin-bottom: 70px;
}

.facts-slider .single-slide .inner {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    gap: 25px;
}

.facts-slider .single-slide .fact {
    grid-column-start: 1;
    grid-column-end: 9;
    background: #FFFFFF;
    box-shadow: 0px 3px 30px #00000017;
    position: relative;

}

.facts-slider .single-slide .fact .text-cont {
    padding: 30px 50px;
}

.facts-slider .single-slide .fact {
    display: flex;
    align-items: center;
}

.facts-slider .single-slide .fact:not(.big) img {
    aspect-ratio: 384 / 216;
    object-fit: cover;
    width: 100%;
}

.facts-slider .single-slide .fact:not(.big)>div {
    flex: 0 0 50%;
}

.facts-slider .single-slide .fact.big {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 3;
    flex-direction: column;
}

.facts-slider .single-slide .fact h3 {
    font-size: var(--fs23);
    color: var(--blue);
    padding-bottom: 16px;
    border-bottom: 1px solid #9B9B9B;
    width: fit-content;
    margin-bottom: 20px;
}

.facts-slider .single-slide .fact:not(.big) .img-cont {
    position: relative;
}

.facts-slider .single-slide .fact:not(.big) .img-cont::before {
    position: absolute;
    content: "";
    width: 50px;
    height: 100%;
    left: -1px;
    top: 0;
    background-color: #fff;
    clip-path: polygon(0 0, 0% 100%, 100% 50%);

}


.facts-slider .single-slide .fact.big .img-cont {
    flex-grow: 1;
    position: relative;
}

.facts-slider .single-slide .fact.big .text-cont {
    padding: 50px 35px;
}

.facts-slider .single-slide .fact.big .img-cont img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.facts-slider .single-slide .fact.big .img-cont::before {
    position: absolute;
    content: "";
    width: 100%;
    height: 50px;
    left: 0;
    top: 0;
    background-color: #fff;
    clip-path: polygon(100% 0, 0 0, 50% 100%);

}

.facts-slider .slider-cont {
    padding-bottom: 120px;
}


/*************************** facts ***************************************/


/*************************** values ***************************************/

.our-values {
    background-size: cover !important;
    display: flex;
    align-items: center;
    min-height: 700px;
}

.our-values .single-slide img {
    height: 30px;
}

.our-values .slider-cont {
    padding-bottom: 60px;
}

.our-values .slick-prev,
.our-values .slick-next,
.sectors .slick-prev,
.sectors .slick-next {
    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7481%) hue-rotate(118deg) brightness(105%) contrast(105%);
}

/*************************** values ***************************************/

/*************************** years ***************************************/
.years {
    padding: 115px 0 150px;
}

.years .block-title {
    margin-bottom: 70px;
}

.years .block-title::before,
.years .block-title::after {
    width: 74px;
}

.block-title::before {
    left: -95px;
}

.block-title::after {
    right: -95px;
}

.years .year-item {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.years .year-item>* {
    flex: 0 0 50%;
}

.years .year-item img {
    width: 100%;
    object-fit: cover;
}

.years .col-lg-3:nth-child(odd) .year-item .text-cont {
    padding: 20px 30px 66px;
}

.years .col-lg-3:nth-child(even) .year-item .text-cont {
    padding: 55px 30px 20px;
}

.years .year-item .text-cont {
    position: relative;
}

.years .year-item .text-cont::before {
    position: absolute;
    content: "";
    width: 100%;
    height: 50px;
    left: 0;
    background-color: #fff;
}

.years .col-lg-3:nth-child(odd) .year-item .text-cont:before {
    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
    top: -49px;

}

.years .col-lg-3:nth-child(even) .year-item .text-cont:before {
    bottom: -49px;
    clip-path: polygon(100% 0, 0 0, 50% 100%);

}

.years .slider-row {
    padding-bottom: 80px;
    position: relative;
}

.years .slider-row::-webkit-scrollbar {
    height: 5px;
}

.years .slider-row::-webkit-scrollbar-track {
    background: transparent;
}


.years .slider-row::-webkit-scrollbar-thumb {
    background: var(--blue);
    border-radius: 50rem;
}
/* ... */

